--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "httpx>=0.28.0",
     "python-dotenv>=1.0.0",
     "edgartools>=2.0.0",
+    "rich>=13.0.0",
 ]
 
 [project.optional-dependencies]
